scilab/modules/core/unit_tests/matsys.dia
 
// test of matsys functions
 
clear
 
 
// debug
 
if debug()<>0 then bugmes();quit;end
 
//debug(4)
 
//if debug()<>4 then bugmes();quit;end
 
debug(0)
 debug    0
 
 
//who
 
a=33;bbb=-1;
 
vars=who('get');
 
if or(vars(1:2)<>['bbb';'a']) then bugmes();quit;end
 
 
//lines
 
ln=lines();lines(30);ln1=lines();
 
if ln1(2)<>30 then bugmes();quit;end
 
lines(45,70);ln1=lines();
 
if or(ln1<>[70,45]) then bugmes();quit;end
 
 
 
//argn
 
deff('[x,y]=foo(a,b)','[lhs,rhs]=argn(0);x=[lhs,rhs];y=-1')
 
if or(foo(1)<>[1 1]) then bugmes();quit;end
 
if or(foo(1,2)<>[1 2]) then bugmes();quit;end
 
if or(foo()<>[1 0]) then bugmes();quit;end
 
[x,y]=foo(1);if or(x<>[2 1]) then bugmes();quit;end
 
[x,y]=foo(1,1);if or(x<>[2 2]) then bugmes();quit;end
 
[x,y]=foo();if or(x<>[2 0]) then bugmes();quit;end
 
deff('[x,y]=foo(a,b)','lhs=argn(0);x=lhs;y=-1')
Warning : redefining function : foo                     
 
 
if foo(1)<>1 then bugmes();quit;end
 
if foo(1,2)<>1 then bugmes();quit;end
 
[x,y]=foo(1);if x<>2 then bugmes();quit;end
 
//
 
deff('[x,y]=foo(a,b)','[lhs,rhs]=argn();x=[lhs,rhs];y=-1')
Warning : redefining function : foo                     
 
 
if or(foo(1)<>[1 1]) then bugmes();quit;end
 
if or(foo(1,2)<>[1 2]) then bugmes();quit;end
 
if or(foo()<>[1 0]) then bugmes();quit;end
 
[x,y]=foo(1);if or(x<>[2 1]) then bugmes();quit;end
 
[x,y]=foo(1,1);if or(x<>[2 2]) then bugmes();quit;end
 
[x,y]=foo();if or(x<>[2 0]) then bugmes();quit;end
 
deff('[x,y]=foo(a,b)','lhs=argn();x=lhs;y=-1')
Warning : redefining function : foo                     
 
 
if foo(1)<>1 then bugmes();quit;end
 
if foo(1,2)<>1 then bugmes();quit;end
 
[x,y]=foo(1);if x<>2 then bugmes();quit;end
 
 
//type
 
if type(1)<>1 then bugmes();quit;end
 
a=%s;if type(a)<>2  then bugmes();quit;end
 
 
//mode (cannot be tested here)
 
//mode(7);if mode()<>7 then bugmes();quit;end;mode(2);
 
 
//errcatch,errclear,iserror
 
clear
 
//errcatch(4,'continue')
 
//unknown
 
//if iserror()<>1 then bugmes();quit;end
 
//errclear()
 
//if iserror()<>0 then bugmes();quit;end
 
//unknown
 
//if iserror(4)<>1 then bugmes();quit;end
 
//errclear(4)
 
//if iserror(4)<>0 then bugmes();quit;end
 
errcatch(4,'continue','nomessage')
 
unknown
 
if iserror()<>1 then bugmes();quit;end
 
errclear()
 
if iserror()<>0 then bugmes();quit;end
 
unknown
 
if iserror(4)<>1 then bugmes();quit;end
 
errclear(4)
 
if iserror(4)<>0 then bugmes();quit;end
 
errcatch()
 
 
//error
 
errcatch(4,'continue','nomessage')
 
error(4)
 
if iserror()<>1 then bugmes();quit;end
 
errclear();errcatch()
 
errcatch(-1,'continue','nomessage')
 
error('test erreur');
 
errclear();
 
error('test erreur',999);
 
errclear();
 
errcatch()
 
 
// lasterror
 
errcatch(4,'continue','nomessage')
 
unknown
 
if stripblanks(lasterror(%f))<>'undefined variable : unknown' then bugmes();quit;end
 
[m,n]=lasterror();
 
if stripblanks(m)<>'undefined variable : unknown' then bugmes();quit;end
 
if n<>4 then bugmes();quit;end
 
if lasterror()<>[] then bugmes();quit;end
 
[m,n]=lasterror();
 
if m<>[]|n<>0 then bugmes();quit;end
 
 
 
 
//resume
 
deff('foo()','[a,b]=resume(''x'',''y'')')
 
foo();
 
if a<>'x'|b<>'y' then bugmes();quit;end
 
 
//format
 
fmt=format();
 
format('v')
 
sqrt(3)
 ans  =
 
    1.7320508  
 
format(10)
 
sqrt(3)
 ans  =
 
    1.7320508  
 
format(12,'v')
 
sqrt(3)
 ans  =
 
    1.732050808  
 
format('v',15)
 
sqrt(3)
 ans  =
 
    1.732050807569  
 
format('e')
 
sqrt(3)
 ans  =
 
    1.73205081D+00  
 
format(10)
 
sqrt(3)
 ans  =
 
    1.732D+00  
 
f=format();
 
if or(f<>[0 10]) then bugmes();quit;end
 
format(10,'v');
 
 
//exists
 
a=1
 a  =
 
    1.  
 
if exists('a')<>1 then bugmes();quit;end
 
clear a
 
if exists('a')<>0 then bugmes();quit;end
 
 
//predef
 
if %f then
N=predef();
a=1;
predef('all');
errcatch(13,'continue','nomessage')
clear a
if iserror()<>1 then bugmes();quit;end
errclear();errcatch()
predef('clear');
errcatch(13,'continue','nomessage')
clear a
if iserror()<>0 then bugmes();quit;end
errclear();errcatch()
predef(N);
if predef()<>N then bugmes();quit;end
end
 
 
// newfun, clearfun, funptr
 
fptr=funptr('sin');
 
if fptr<>623 then bugmes();quit;end
 
newfun('mysin',fptr);
 
if mysin(1)<>sin(1) then bugmes();quit;end
 
clearfun('mysin');
 
errcatch(4,'continue','nomessage')
 
mysin(1)
 
if iserror()<>1 then bugmes();quit;end
 
errclear();errcatch();
 
 
//whereis
 
if whereis('sci2exp')<>'m2scilib' then bugmes();quit;end
error on test
